--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
         data-z-index="-1">
       </div>
       <div class="text-overlay">
-        <h1>I Build Stuff.</h1>
+        <h1>Hi, I'm Kovidh Gandreti</h1>
       </div>
     </div>
   </div>
@@ -33,13 +33,13 @@
       <div class="container" style="max-width: 800px;">
         <div class="row align-items-center mobile-pad" style="min-height: 40px;">
           <div class="col-sm-4 text-pad">
-            My Name
+            Collierville High School
           </div>
           <div class="col-sm-4 text-pad">
-            me@gmail.com
+            kovidhgandreti@gmail.com
           </div>
           <div class="col-sm-4 text-pad">
-            Los Angeles, CA
+            Collierville, TN
           </div>
         </div>
       </div>
@@ -48,10 +48,9 @@
   <div class="container page-content-container" style="margin-top: 40px;">
     <div class="row">
       <div class="col blurb-section">
-        <p>I'm a student passionate about xyz</p>
-        <p>creating stuff that is potentially interesting to you.</p>
-        <p>Intrigued by design, sports, photography, coding, and always learning more.</p>
-        <p>Check out what I've done.</p>
+        <p>"Don’t look back. Just do it. Don’t Regret." - Ratan Tata</p>
+        <p>I'm a highschool student passionate about tech.</p>
+        <p>Intrigued by design, coding, technological advancements, and always learning more.</p>
       </div>
     </div>
   </div>
@@ -70,23 +69,28 @@
         <div class="container section-content">
           <div class="row">
             <div class="col section-content-header">
-              Project 1
+              CyberPatriots
             </div>
           </div>
           <div class="row">
             <div class="col time-span">
-              Aug 2020 - Present
+              Sept 2021 - Present
             </div>
           </div>
           <div class="row">
             <div class="col section-content-inner">
-              <p>Here is what I did for this project</p>
-              <p>Here are some action steps I took</p>
+              <p>​The National Youth Cyber Education Program created by the Air Force Association to inspire K-12 students toward careers in cybersecurity or other science, technology, engineering, and mathematics (STEM) disciplines critical to our nation's future.</p>
+              <p>Skills Gained</p>
               <ul>
-                <li class="main-li">I planned this out</li>
-                <li class="sub-li">Step 1</li>
-                <li class="sub-li">Step 2</li>
-                <li class="main-li">I executed this</li>
+                <li class="main-li">The main goal of every round of competition is to improve the security of one or more virtual machine images. In the past, teams have been tasked with:</li>
+                <li class="sub-li">Maintaining and hardening critical services</li>
+                <li class="sub-li">Fixing vulnerabilities</li>
+                <li class="sub-li">Removing malware from the systems</li>
+                <li class="sub-li">Answering forensics questions</li>
+                <li class="main-li">CyberPatriot has used these images during the online rounds:</li>
+                <li class="sub-li">Windows 10 </li>
+                <li class="sub-li">Windows Server 2016, and Windows Server 2019</li>
+                <li class="sub-li">Ubuntu 16, Ubuntu 18, Debian 9</li>
               </ul>
             </div>
           </div>
@@ -96,23 +100,44 @@
         <div class="container section-content">
           <div class="row">
             <div class="col section-content-header">
-              Project 2
+              Robotics
             </div>
           </div>
           <div class="row">
             <div class="col time-span">
-              Aug 2019 - Jan 2020
+              Early 2017 - Present
             </div>
           </div>
           <div class="row">
             <div class="col section-content-inner">
-              <p>Here is what I did for this project</p>
-              <p>Here are some action steps I took</p>
-              <ul>
-                <li class="main-li">I planned this out</li>
-                <li class="sub-li">Step 1</li>
-                <li class="sub-li">Step 2</li>
-                <li class="main-li">I executed this</li>
+              <p>2016 - 2017: FIRST Lego League | Animal Allies</p>
+              <li>Every year FIRST releases a new challenge that engages the teams in hands-on robotics design and scientific research. The theme for the challenge is different each year, allowing teams to learn about a variety of subjects.</li>
+              <p>2017 - 2019: FIRST Tech Challenge | Relic Recovery & Rover Ruckus</p>
+              <li>FIRST Tech Challenge teams are challenged to design, build, program, and operate robots to compete in a head-to-head challenge in an alliance format.</li>
+              <p>2019 - PRESENT: FIRST Robotics Competition | Destination: Deep Space & TBD</p>
+              <li>Under strict rules, limited time and resources, teams of students are challenged to raise funds, design a team "brand," hone teamwork skills, and build and program industrial-size robots to play a difficult field game against like-minded competitors.</li>
+              <p></p>
+            </ul>
+            </div>
+          </div>
+        </div>
+
+                <!-- Project 1 -->
+        <div class="container section-content">
+          <div class="row">
+            <div class="col section-content-header">
+              NHS
+            </div>
+          </div>
+          <div class="row">
+            <div class="col time-span">
+              April 2021 - PRESENT
+            </div>
+          </div>
+          <div class="row">
+            <div class="col section-content-inner">
+              <p>The National Honor Society is a nationwide organization for high school students in the United States and outlying territories, which consists of many chapters in high schools. In this club, I participated in comminuty-based volunteering events to benefit my town.</p>
+              <p>Skills Gained</p>
               </ul>
             </div>
           </div>
@@ -126,7 +151,7 @@
   <div class="container page-content-container" style="margin-top: 20px;">
     <div class="row">
       <div class="col section-header">
-        Projects
+        Misc Activities
       </div>
     </div>
 
@@ -137,23 +162,21 @@
         <div class="container section-content">
           <div class="row">
             <div class="col section-content-header">
-              Project 1
+              Youth Commitee of TAM
             </div>
           </div>
           <div class="row">
             <div class="col time-span">
-              Aug 2020 - Present
+              Jan 2021 - PRESENT
             </div>
           </div>
           <div class="row">
             <div class="col section-content-inner">
-              <p>Here is what I did for this project</p>
-              <p>Here are some action steps I took</p>
+              <p>Telugu Association of Memphis is a non profit organization established with a mission statement to preserve the Telugu Samskriti (Culture), Sahithi (Literaturer) and Sampradayam (Tradition) in telugu speaking people of Memphis area.</p>
               <ul>
-                <li class="main-li">I planned this out</li>
-                <li class="sub-li">Step 1</li>
-                <li class="sub-li">Step 2</li>
-                <li class="main-li">I executed this</li>
+                <li class="main-li">Role - Director of Sports</li>
+                <li class="sub-li">I oversee the facility management, human resources, funding and policy adherence of a sports organization in compliance with certain rules and regulations </li>
+                <li class="sub-li">I also volunteer for events hosted by TAM.</li>
               </ul>
             </div>
           </div>
@@ -163,106 +186,29 @@
         <div class="container section-content">
           <div class="row">
             <div class="col section-content-header">
-              Project 2
+              SOLIDWORKS
             </div>
           </div>
           <div class="row">
             <div class="col time-span">
-              Aug 2019 - Jan 2020
+              September 2021 - PRESENT
             </div>
           </div>
           <div class="row">
             <div class="col section-content-inner">
-              <p>Here is what I did for this project</p>
-              <p>Here are some action steps I took</p>
+              <p>SolidWorks is a solid modeling computer-aided design and computer-aided engineering computer program.</p>
+              <p>In my STEM III class, I have worked with SOLIDWORKS to produce a variety of different 3D models.</p>
               <ul>
-                <li class="main-li">I planned this out</li>
-                <li class="sub-li">Step 1</li>
-                <li class="sub-li">Step 2</li>
-                <li class="main-li">I executed this</li>
+                <li class="main-li">Some skills aquired:</li>
+                <li class="sub-li">Basic Part Modeling</li>
+                <li class="sub-li">Assembly Modeling</li>
+                <li class="sub-li">Revolves and Sweeps.</li>
+                <li class="sub-li">Mold Design and Casted Parts.</li>
+                <li class="sub-li">Editing Errors and Design Change.</li>
               </ul>
             </div>
           </div>
         </div>
-
-        <!-- Project 3 -->
-        <div class="container section-content">
-          <div class="row">
-            <div class="col section-content-header">
-              Project 3
-            </div>
-          </div>
-          <div class="row">
-            <div class="col time-span">
-              Sept 2018 - June 2019
-            </div>
-          </div>
-          <div class="row">
-            <div class="col section-content-inner">
-              <p>Here is what I did for this project</p>
-              <p>Here are some action steps I took</p>
-              <ul>
-                <li class="main-li">I planned this out</li>
-                <li class="sub-li">Step 1</li>
-                <li class="sub-li">Step 2</li>
-                <li class="main-li">I executed this</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-  <div class="container page-content-container" style="margin-top: 20px;">
-    <div class="row">
-      <div class="col section-header">
-        Awards / Honors / Certifications
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col">
-
-        <!-- Project 1 -->
-        <div class="container section-content">
-
-          <div class="row">
-            <div class="col section-content-header">
-              Award 1
-            </div>
-          </div>
-          <div class="row">
-            <div class="col time-span award-space-bottom">
-              From this org
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col section-content-header">
-              Certification
-            </div>
-          </div>
-          <div class="row">
-            <div class="col time-span award-space-bottom">
-              What this certification is about
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col section-content-header">
-              Honor
-            </div>
-          </div>
-          <div class="row">
-            <div class="col time-span award-space-bottom">
-              Here's what I did
-            </div>
-          </div>
-
-        </div>
-
 
       </div>
     </div>
@@ -330,24 +276,24 @@
       <div class="col-sm-6 contact-icons">
         <div>
           <img src="/static/img/contact-icons/gmail.png">
-          <span class="contact-info">me@gmail.com</span>
+          <span class="contact-info">kovidhgandreti@gmail.com</span>
         </div>
         <div>
           <a href="https://www.linkedin.com/">
             <img src="/static/img/contact-icons/linkedin.png">
-            <span class="contact-info">linkedin.com/myprofile</span>
+            <span class="contact-info">n/a</span>
           </a>
         </div>
         <div>
           <a href="https://www.instagram.com/">
             <img src="/static/img/contact-icons/insta.jpg">
-            <span class="contact-info">@myhandle</span>
+            <span class="contact-info">@imapandemic</span>
           </a>
         </div>
         <div>
           <a href="https://github.com/">
             <img src="/static/img/contact-icons/github.png">
-            <span class="contact-info">github.com/myprofile</span>
+            <span class="contact-info">github.com/kgand</span>
           </a>
         </div>
       </div>
