--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -32,11 +32,11 @@
 
   text-align: center;
 
-  color: #8b8b8b;
+  color: #dfe215;
 }
 
 .hero-under-banner {
-  background-color: #f7f7f7;
+  background-color: #ffffff;
 
   text-align: center;
   font-family: Montserrat, sans-serif;
