--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
 <div class="row">
   <div class="col hero-section justify-content-center align-items-middle">
     <div class="hero-section" style="background: none;">
-      <div class="parallax-window" data-parallax="scroll" data-image-src="/static/img/splash.jpg" style="height: 100%;"
+      <div class="parallax-window" data-parallax="scroll" data-image-src="/static/img/mountain.jpg" style="height: 100%;"
         data-z-index="-1">
       </div>
       <div class="text-overlay">
@@ -220,16 +220,16 @@
         <div class="overlay-content">
           <div class="content-overlay"></div>
           <div class="overlay-content-image-container">
-            <img class="overlay-content-image" src="/static/img/interest-1.jpg">
+            <img class="overlay-content-image" src="/static/img/cyber.jpg">
           </div>
           <div class="content-details fadeIn-bottom">
-            <h3 class="content-title">This is a title</h3>
-            <p class="content-text">This is a short description</p>
+            <h3 class="content-title">CyberPatriots</h3>
+            <p class="content-text">Securing Windows Server</p>
           </div>
         </div>
       </div>
       <div class="interest-img-holder">
-        <img src="/static/img/interest-1.jpg">
+        <img src="/static/img/cyber.jpg">
       </div>
     </div>
     <div class="col-lg-4">
@@ -237,11 +237,11 @@
         <div class="overlay-content">
           <div class="content-overlay"></div>
           <div class="overlay-content-image-container">
-            <img class="overlay-content-image" src="/static/img/interest-2.jpg">
+            <img class="overlay-content-image" src="/static/img/rubik.jpg">
           </div>
           <div class="content-details fadeIn-bottom">
-            <h3 class="content-title">This is a title</h3>
-            <p class="content-text">This is a short description</p>
+            <h3 class="content-title">"Our whole life is solving puzzles"</h3>
+            <p class="content-text">Erno Rubik</p>
           </div>
         </div>
       </div>
@@ -251,11 +251,11 @@
         <div class="overlay-content">
           <div class="content-overlay"></div>
           <div class="overlay-content-image-container">
-            <img class="overlay-content-image" src="/static/img/interest-3.jpg">
+            <img class="overlay-content-image" src="/static/img/frc.jpg">
           </div>
           <div class="content-details fadeIn-bottom">
-            <h3 class="content-title">This is a title</h3>
-            <p class="content-text">This is a short description</p>
+            <h3 class="content-title">First Robotics Competition</h3>
+            <p class="content-text">Teams make robots to compete in a series of tasks</p>
           </div>
         </div>
       </div>
