--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
   <!-- /styles -->
 
   <!-- favicons CHANGE HERE IF YOU WANT TO CHANGE FAVICON -->
-  <link rel="shortcut icon" href="/static/img/rubikicon.ico">
+  <link rel="shortcut icon" href="/static/img/favicon.ico">
   <!-- /favicons -->
 
   <!-- scripts -->
