revoked personal info

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
         data-z-index="-1">
       </div>
       <div class="text-overlay">
-        <h1>Hi, I'm Kovidh Gandreti</h1>
+        <h1>Greetings, I'm Kovidh Gandreti</h1>
       </div>
     </div>
   </div>
@@ -281,13 +281,13 @@
         <div>
           <a href="https://www.linkedin.com/">
             <img src="/static/img/contact-icons/linkedin.png">
-            <span class="contact-info">n/a</span>
+            <span class="contact-info">@</span>
           </a>
         </div>
         <div>
           <a href="https://www.instagram.com/">
             <img src="/static/img/contact-icons/insta.jpg">
-            <span class="contact-info">@imapandemic</span>
+            <span class="contact-info">@</span>
           </a>
         </div>
         <div>
