fixed miscellaneous title

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -151,7 +151,7 @@
   <div class="container page-content-container" style="margin-top: 20px;">
     <div class="row">
       <div class="col section-header">
-        Misc Activities
+        Miscellaneous Activities
       </div>
     </div>
 
